--- a/cigale/pcigale.ini
+++ b/cigale/pcigale.ini
@@ -4,8 +4,11 @@
 # distance computed from the redshift), the filter names for the fluxes,
 # and the filter names with the '_err' suffix for the uncertainties. The
 # fluxes and the uncertainties must be in mJy for broadband data and in
-# W/m² for emission lines. This file is optional to generate the
-# configuration file, in particular for the savefluxes module.
+# W/m² for emission lines. Fluxes can be positive or negative. Upper
+# limits are indicated with a negative value for the uncertainty. In
+# case some fluxes are missing for some entries, they can be replaced
+# with NaN. This file is optional to generate the configuration file, in
+# particular for the savefluxes module.
 data_file = catalog.cat
 
 # Optional file containing the list of physical parameters. Each column
@@ -19,7 +22,7 @@ data_file = catalog.cat
 # yield incorrect results.
 parameters_file =
 
-# Avaiable modules to compute the models. The order must be kept.
+# Available modules to compute the models. The order must be kept.
 # SFH:
 # * sfh2exp (double exponential)
 # * sfhdelayed (delayed SFH with optional exponential burst)
@@ -41,21 +44,24 @@ parameters_file =
 # * dl2014 (Draine et al. 2014 update of the previous models)
 # * themis (Themis dust emission models from Jones et al. 2017)
 # AGN:
+# * skirtor2016 (AGN models from Stalevski et al. 2012, 2016)
 # * fritz2006 (AGN models from Fritz et al. 2006)
+# X-ray:
+# * xray (from AGN and galaxies; skirtor2016/fritz2006 is needed for AGN)
 # Radio:
-# * radio (synchrotron emission)
+# * radio (galaxy synchrotron emission and AGN; skirtor2016/fritz2006 is needed for AGN)
 # Restframe parameters:
 # * restframe_parameters (UV slope (β), IRX, D4000, EW, etc.)
 # Redshift+IGM:
 # * redshifting (mandatory, also includes the IGM from Meiksin 2006)
-sed_modules = sfhdelayed, bc03, nebular, dustatt_modified_CF00, dale2014, restframe_parameters, redshifting
+sed_modules = sfhdelayed, bc03, nebular, dustatt_calzleit, dale2014, restframe_parameters, redshifting
 
 # Method used for statistical analysis. Available methods: pdf_analysis,
 # savefluxes.
 analysis_method = pdf_analysis
 
-# Number of CPU cores available. This computer has 8 cores.
-cores = 125
+# Number of CPU cores available. This computer has 36 cores.
+cores = 25
 
 # Bands to consider. To consider uncertainties too, the name of the band
 # must be indicated with the _err suffix. For instance: FUV, FUV_err.
@@ -65,6 +71,10 @@ bands = uvc.F275W, uvc.F275W_err, uvc.F435W, uvc.F435W_err, uvc.F606W, uvc.F606W
 # rest frame rather than the observed frame. This is the case for
 # instance the equivalent widths and for luminosity densities.
 properties =
+
+# Relative error added in quadrature to the uncertainties of the fluxes
+# and the extensive properties.
+additionalerror = 0.0
 
 
 # Configuration of the SED creation modules.
@@ -100,34 +110,52 @@ properties =
     separation_age = 10
 
   [[nebular]]
-    # Ionisation parameter
+    # Ionisation parameter. Possible values are: -4.0, -3.9, -3.8, -3.7,
+    # -3.6, -3.5, -3.4, -3.3, -3.2, -3.1, -3.0, -2.9, -2.8, -2.7, -2.6,
+    # -2.5, -2.4, -2.3, -2.2, -2.1, -2.0, -1.9, -1.8, -1.7, -1.6, -1.5,
+    # -1.4, -1.3, -1.2, -1.1, -1.0.
     logU = -2.0
-    # Fraction of Lyman continuum photons escaping the galaxy
+    # Gas metallicity. Possible values are: 0.000, 0.0004, 0.001, 0.002,
+    # 0.0025, 0.003, 0.004, 0.005, 0.006, 0.007, 0.008, 0.009, 0.011, 0.012,
+    # 0.014, 0.016, 0.019, 0.020, 0.022, 0.025, 0.03, 0.033, 0.037, 0.041,
+    # 0.046, 0.051.
+    zgas = 0.02
+    # Electron density. Possible values are: 10, 100, 1000.
+    ne = 100
+    # Fraction of Lyman continuum photons escaping the galaxy. Possible
+    # values between 0 and 1.
     f_esc = 0.0
-    # Fraction of Lyman continuum photons absorbed by dust
+    # Fraction of Lyman continuum photons absorbed by dust. Possible values
+    # between 0 and 1.
     f_dust = 0.0
-    # Line width in km/s
+    # Line width in km/s.
     lines_width = 300.0
     # Include nebular emission.
     emission = True
 
-  [[dustatt_modified_CF00]]
-    # V-band attenuation in the interstellar medium.
-    Av_ISM = 0.0,0.2,0.4,0.6,0.8,1.0,1.2,1.4,1.6,1.8,2.0,2.2,2.4,2.6,2.8,3.0,3.2,3.4,3.6,3.8,4.0
-    # Av_ISM / (Av_BC+Av_ISM)
-    mu = 0.44
-    # Power law slope of the attenuation in the ISM.
-    slope_ISM = -0.7
-    # Power law slope of the attenuation in the birth clouds.
-    slope_BC = -1.3
+  [[dustatt_calzleit]]
+    # E(B-V)*, the colour excess of the stellar continuum light for the
+    # young population.
+    E_BVs_young = 0.0,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0,1.1,1.2
+    # Reduction factor for the E(B-V)* of the old population compared to the
+    # young one (<1).
+    E_BVs_old_factor = 1.0
+    # Central wavelength of the UV bump in nm.
+    uv_bump_wavelength = 217.5
+    # Width (FWHM) of the UV bump in nm.
+    uv_bump_width = 35.0
+    # Amplitude of the UV bump. For the Milky Way: 3.
+    uv_bump_amplitude = 0.0
+    # Slope delta of the power law modifying the attenuation curve.
+    powerlaw_slope = 0.0
     # Filters for which the attenuation will be computed and added to the
     # SED information dictionary. You can give several filter names
     # separated by a & (don't use commas).
-    filters = V_B90 & FUV
+    filters = B_B90 & V_B90 & FUV
 
   [[dale2014]]
     # AGN fraction. It is not recommended to combine this AGN emission with
-    # the of Fritz et al. (2006) models.
+    # the of Fritz et al. (2006) or SKIRTOR models.
     fracAGN = 0.0
     # Alpha slope. Possible values are: 0.0625, 0.1250, 0.1875, 0.2500,
     # 0.3125, 0.3750, 0.4375, 0.5000, 0.5625, 0.6250, 0.6875, 0.7500,
@@ -141,7 +169,8 @@ properties =
     alpha = 2.0
 
   [[restframe_parameters]]
-    # UV slope measured in the same way as in Calzetti et al. (1994).
+    # Observed and intrinsic UV slopes β and β₀ measured in the same way as
+    # in Calzetti et al. (1994).
     beta_calz94 = False
     # D4000 break using the Balogh et al. (1999) definition.
     D4000 = False
@@ -180,9 +209,15 @@ properties =
   # Save the raw chi2. It occupies ~15 MB/million models/variable. Allowed
   # values are 'all', 'none', 'properties', and 'fluxes'.
   save_chi2 = none
-  # If true, for each object check whether upper limits are present and
-  # analyse them.
-  lim_flag = False
+  # Take into account upper limits. If 'full', the exact computation is
+  # done. If 'noscaling', the scaling of the models will not be adjusted
+  # but the χ² will include the upper limits adequately. Waiving the
+  # adjustment makes the fitting much faster compared to the 'full' option
+  # while generally not affecting the results in any substantial manner.
+  # This is the recommended option as it achieves a good balance between
+  # speed and reliability. Finally, 'none' simply discards bands with
+  # upper limits.
+  lim_flag = noscaling
   # If true, for each object we create a mock object and analyse them.
   mock_flag = False
   # When redshifts are not given explicitly in the redshifting module,
